# daily-office-app

./: .daily-office-app.code-workspace  .gitignore  DEPLOY.md  README.md  zensical.toml
android/: settings.gradle.kts
backend/: .env.example  main.py  pyproject.toml
backend/app/: schemas.py
backend/app/api/: bible.py  habits.py  office.py  office_full.py  psalms.py
backend/app/auth/: cli.py  db.py  deps.py  routes.py  tokens.py
backend/app/bible/: book_map.py  db.py  reference_parser.py
backend/app/calendar/: computus.py  liturgical_year.py
backend/app/collects/: loader.py  resolver.py
backend/app/habits/: db.py
backend/app/lectionary/: loader.py  normalizer.py  resolver.py
backend/app/office/: builder.py  canticle_resolver.py  loader.py
backend/app/templates/: 404.html  500.html  _habit_toggle.html  _office_blocks.html  _office_tab.html  base.html  habits.html  index.html  login.html  office.html  office_full.html  profile.html  register.html  set_password.html
backend/data/collects/: common_saints.json  holy_days.json  seasons.json  various.json
backend/data/office/: canticles.json  fixed_texts.json  opening_sentences.json
backend/data/readings/: holy_days.json  special_occasions.json  year_1.json  year_2.json
backend/tests/: test_bible_db.py  test_calendar.py  test_lectionary.py  test_psalm_tokens.py  test_reference_parser.py
daily-office-master-reubenlillie/: README.md
docs/: architecture.md  index.md  setup.md
infra/: .gitignore  acm.tf  alb.tf  cloudfront.tf  cloudwatch.tf  ec2.tf  main.tf  outputs.tf  s3.tf  user_data.sh  waf.tf  (+2 more)
(+15 files in other folders)
